Implement typography system with Archivo, Inter, and Roboto fonts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>TC Design</title>
     <link rel="stylesheet" href="styles/main.css">
     <meta name="description" content="TC Design - Creative design solutions and projects">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -25,36 +28,36 @@
     <main>
         <section id="home" class="hero">
             <div class="hero-content">
-                <h2>Welcome to TC Design</h2>
-                <p>Creative design solutions for modern digital experiences</p>
-                <button class="cta-button">Get Started</button>
+                <h2 class="text-heading-1">Welcome to TC Design</h2>
+                <p class="text-body-lg">Creative design solutions for modern digital experiences</p>
+                <button class="cta-button text-button">Get Started</button>
             </div>
         </section>
 
         <section id="projects" class="projects">
             <div class="container">
-                <h2>Featured Projects</h2>
+                <h2 class="text-heading-2">Featured Projects</h2>
                 <div class="project-grid">
                     <div class="project-card">
                         <div class="project-image">
                             <div class="placeholder">Project 1</div>
                         </div>
-                        <h3>Project Title</h3>
-                        <p>Project description goes here</p>
+                        <h3 class="text-heading-4">Project Title</h3>
+                        <p class="text-body-base">Project description goes here</p>
                     </div>
                     <div class="project-card">
                         <div class="project-image">
                             <div class="placeholder">Project 2</div>
                         </div>
-                        <h3>Project Title</h3>
-                        <p>Project description goes here</p>
+                        <h3 class="text-heading-4">Project Title</h3>
+                        <p class="text-body-base">Project description goes here</p>
                     </div>
                     <div class="project-card">
                         <div class="project-image">
                             <div class="placeholder">Project 3</div>
                         </div>
-                        <h3>Project Title</h3>
-                        <p>Project description goes here</p>
+                        <h3 class="text-heading-4">Project Title</h3>
+                        <p class="text-body-base">Project description goes here</p>
                     </div>
                 </div>
             </div>
@@ -62,18 +65,18 @@
 
         <section id="about" class="about">
             <div class="container">
-                <h2>About TC Design</h2>
-                <p>We specialize in creating beautiful, functional, and user-centered design solutions. Our approach combines creativity with technical expertise to deliver exceptional digital experiences.</p>
+                <h2 class="text-heading-2">About TC Design</h2>
+                <p class="text-body-lg">We specialize in creating beautiful, functional, and user-centered design solutions. Our approach combines creativity with technical expertise to deliver exceptional digital experiences.</p>
             </div>
         </section>
 
         <section id="contact" class="contact">
             <div class="container">
-                <h2>Get In Touch</h2>
-                <p>Ready to start your next design project? Let's talk!</p>
+                <h2 class="text-heading-2">Get In Touch</h2>
+                <p class="text-body-lg">Ready to start your next design project? Let's talk!</p>
                 <div class="contact-info">
-                    <p>Email: hello@tcdesign.com</p>
-                    <p>Phone: (555) 123-4567</p>
+                    <p class="text-body-base">Email: hello@tcdesign.com</p>
+                    <p class="text-body-base">Phone: (555) 123-4567</p>
                 </div>
             </div>
         </section>
@@ -81,7 +84,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 TC Design. All rights reserved.</p>
+            <p class="text-body-sm">&copy; 2024 TC Design. All rights reserved.</p>
         </div>
     </footer>
 
