Add six project pages and link cards; layout tweaks for Work/About; About centering and spacing; social btn outline hover

--- a/index.html
+++ b/index.html
@@ -65,54 +65,54 @@
             <div class="container">
                 <h2 class="text-heading-2">Work</h2>
                 <div class="project-grid">
-                    <div class="project-card">
+                    <a class="project-card" href="evolve-inbox.html">
                         <div class="project-image">
                             <div class="placeholder">Project 1</div>
                         </div>
                         <span class="project-badge">Launched</span>
-                        <h3 class="text-heading-4">Project Title</h3>
-                        <p class="text-body-base">Project description goes here</p>
-                    </div>
-                    <div class="project-card">
+                        <h3 class="text-heading-4">Reimagining Owner–Guest Communication with Inbox</h3>
+                        <p class="text-body-base">Lead designer <span style="color: var(--color-grey);">•</span> Evolve</p>
+                    </a>
+                    <a class="project-card" href="evolve-owner-account.html">
                         <div class="project-image">
                             <div class="placeholder">Project 2</div>
                         </div>
                         <span class="project-badge">Launched</span>
-                        <h3 class="text-heading-4">Project Title</h3>
-                        <p class="text-body-base">Project description goes here</p>
-                    </div>
-                    <div class="project-card">
+                        <h3 class="text-heading-4">Transforming the Owner Journey with a Seamless Experience</h3>
+                        <p class="text-body-base">Senior designer <span style="color: var(--color-grey);">•</span> Evolve</p>
+                    </a>
+                    <a class="project-card" href="transamerica-app.html">
                         <div class="project-image">
                             <div class="placeholder">Project 3</div>
                         </div>
                         <span class="project-badge">Launched</span>
-                        <h3 class="text-heading-4">Project Title</h3>
-                        <p class="text-body-base">Project description goes here</p>
-                    </div>
-                    <div class="project-card">
+                        <h3 class="text-heading-4">Designing a Mobile App that Empowers Users on their Retirement Journeys</h3>
+                        <p class="text-body-base">Senior designer <span style="color: var(--color-grey);">•</span> Transamerica</p>
+                    </a>
+                    <a class="project-card" href="transamerica-workplace-experience.html">
                         <div class="project-image">
                             <div class="placeholder">Project 4</div>
                         </div>
                         <span class="project-badge">Launched</span>
-                        <h3 class="text-heading-4">Project Title</h3>
-                        <p class="text-body-base">Project description goes here</p>
-                    </div>
-                    <div class="project-card">
+                        <h3 class="text-heading-4">Re-imagining a New Responsive Web Experience for Financial Professionals</h3>
+                        <p class="text-body-base">Senior designer <span style="color: var(--color-grey);">•</span> Transamerica</p>
+                    </a>
+                    <a class="project-card" href="gm-dealer-sales-assistant-app.html">
                         <div class="project-image">
                             <div class="placeholder">Project 5</div>
                         </div>
                         <span class="project-badge">Launched</span>
-                        <h3 class="text-heading-4">Project Title</h3>
-                        <p class="text-body-base">Project description goes here</p>
-                    </div>
-                    <div class="project-card">
+                        <h3 class="text-heading-4">Designing a Powerful Native Mobile & Tablet Sales Tool Application</h3>
+                        <p class="text-body-base">UX/UI designer <span style="color: var(--color-grey);">•</span> General Motors (GM)</p>
+                    </a>
+                    <a class="project-card" href="extra.html">
                         <div class="project-image">
                             <div class="placeholder">Project 6</div>
                         </div>
-                        <span class="project-badge">Launched</span>
-                        <h3 class="text-heading-4">Project Title</h3>
-                        <p class="text-body-base">Project description goes here</p>
-                    </div>
+                        <span class="project-badge">For fun</span>
+                        <h3 class="text-heading-4">Side work, Illustrations, Extra Curriculars, and Everything Else</h3>
+                        <p class="text-body-base">Me <span style="color: var(--color-grey);">•</span> The world</p>
+                    </a>
                 </div>
             </div>
         </section>
@@ -120,7 +120,7 @@
         <section id="about" class="about">
             <div class="container">
                 <h2 class="text-heading-2">Curious about my process?</h2>
-                <p class="text-body-lg">AI is now baked into my foundational process as a creative sidekick. It's not a shortcut — it's a way to work smarter and stay curious.</p>
+                <p class="text-body-lg">AI is now baked into my foundational process as a creative sidekick. <br> It's not a shortcut — it's a way to work smarter and stay curious.</p>
                 <p><a href="ai-design.html" class="nav-link">Learn more</a></p>
             </div>
         </section>
