--- a/transamerica-app.html
+++ b/transamerica-app.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI + Design · TC Design</title>
+    <title>Transamerica App · TC Design</title>
     <link rel="stylesheet" href="styles/main.css">
-    <meta name="description" content="AI + Design at TC Design">
+    <meta name="description" content="Transamerica App case study">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-</head>
+    <script defer src="scripts/main.js"></script>
+    <style> .case-hero { padding: 120px 20px 80px; } .case-hero .container { max-width: 870px; margin: 0 auto; } .case-hero h1 { margin: 0 0 12px; } .case-hero p { margin: 0; } </style>
+    </head>
 <body>
     <header class="header">
         <nav class="nav">
@@ -28,7 +30,7 @@
             </div>
         </nav>
     </header>
-    
+
     <div id="mobileMenu" class="mobile-menu">
         <button class="menu-close" aria-label="Close menu"></button>
         <ul class="mobile-menu-list" role="menu">
@@ -39,25 +41,10 @@
     </div>
 
     <main>
-        <section class="hero hero--compact">
-            <div class="hero-grid container">
-                <div class="hero-content">
-                    <h2 class="text-heading-2">AI + Design: My process</h2>
-                    <p class="text-body-lg">AI is baked into my process as a creative sidekick. I use tools like <span style="color: var(--text-accent);"> ChatGPT, Gemini, Cursor, Figma Make, and V0 </span> to elevate my design process, surface blind spots, and speed up the busy work. It helps me crunch data from user behaviors and past studies—whether I’m testing hypotheses, doing bottom‑up or top‑down analysis, or translating insights into design decisions. For me, AI is an exciting frontier to explore as a designer* and a powerful tool to incorporate into the experiences I create**.</p>
-                    <p class="text-body-base ai-note">*I designed my website with Figma, Cursor, and Github. <a href="https://github.com/tlainy">Take a look at my Github</a></p>
-                    <p class="text-body-base ai-note">**I’ve placed 1st and 2nd in hackathons by creating innovative solutions powered by AI. <a href="#">Check out my hacks</a></p>
-                </div>
-            </div>
-        </section>
-
-        <section class="container ai-gallery" aria-label="Gallery">
-            <div class="ai-gallery-grid">
-                <div class="ai-tile" aria-hidden="true"></div>
-                <div class="ai-tile" aria-hidden="true"></div>
-                <div class="ai-tile" aria-hidden="true"></div>
-                <div class="ai-tile" aria-hidden="true"></div>
-                <div class="ai-tile" aria-hidden="true"></div>
-                <div class="ai-tile" aria-hidden="true"></div>
+        <section class="case-hero">
+            <div class="container">
+                <h1 class="text-heading-1">Transamerica App</h1>
+                <p class="text-body-lg">Case study page placeholder. Content coming soon.</p>
             </div>
         </section>
     </main>
@@ -66,16 +53,16 @@
         <div class="container">
             <div class="social-links" role="navigation" aria-label="Social links">
                 <a class="social-btn" href="https://www.linkedin.com/in/tlainy" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
-                    <img src="assets/linkedin.png" alt="" aria-hidden="true" />
+                    <img src="assets/Linkedin_circular.svg" alt="" aria-hidden="true" />
                 </a>
                 <a class="social-btn" href="mailto:tlainy@gmail.com" aria-label="Email">
-                    <img src="assets/email.png" alt="" aria-hidden="true" />
+                    <img src="assets/Email_circular.svg" alt="" aria-hidden="true" />
                 </a>
             </div>
             <p class="text-body-sm">&copy; 2025 TC Design. All rights reserved.</p>
         </div>
     </footer>
-    <script src="scripts/main.js"></script>
 </body>
 </html>
+
 
