Case pages: align hero + global 12-col widths; evolve-inbox Discovery/Metrics sections with collage and full-width images; bullet/style fixes; link underline behavior; hero text 6-col; work padding

--- a/about.html
+++ b/about.html
@@ -53,10 +53,10 @@
         <div class="container">
             <div class="social-links" role="navigation" aria-label="Social links">
                 <a class="social-btn" href="https://www.linkedin.com/in/tlainy" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
-                    <img src="assets/linkedin.png" alt="" aria-hidden="true" />
+                    <img src="assets/Linkedin_circular.svg" alt="" aria-hidden="true" />
                 </a>
                 <a class="social-btn" href="mailto:tlainy@gmail.com" aria-label="Email">
-                    <img src="assets/email.png" alt="" aria-hidden="true" />
+                    <img src="assets/Email_circular.svg" alt="" aria-hidden="true" />
                 </a>
             </div>
             <p class="text-body-sm">&copy; 2025 TC Design. All rights reserved.</p>
