--- a/ai-design.html
+++ b/ai-design.html
@@ -9,6 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+    <style>
+        /* Right-side hero media for AI + Design */
+        .ai-hero-media .ai-media-stack { display: flex; flex-direction: column; align-items: center; gap: 20px; width: 100%; max-width: 420px; }
+        .ai-hero-media .ai-media-stack img { max-width: 320px; width: 100%; height: auto; border-radius: 16px; box-shadow: var(--shadow-md); }
+    </style>
 </head>
 <body>
     <header class="header">
@@ -43,9 +48,15 @@
             <div class="hero-grid container">
                 <div class="hero-content">
                     <h2 class="text-heading-2">AI + Design: My process</h2>
-                    <p class="text-body-lg">AI is baked into my process as a creative sidekick. I use tools like <span style="color: var(--text-accent);"> ChatGPT, Gemini, Cursor, Figma Make, and V0 </span> to elevate my design process, surface blind spots, and speed up the busy work. It helps me crunch data from user behaviors and past studies—whether I’m testing hypotheses, doing bottom‑up or top‑down analysis, or translating insights into design decisions. For me, AI is an exciting frontier to explore as a designer* and a powerful tool to incorporate into the experiences I create**.</p>
-                    <p class="text-body-base ai-note">*I designed my website with Figma, Cursor, and Github. <a href="https://github.com/tlainy">Take a look at my Github</a></p>
+                    <p class="text-body-lg">AI is baked into my process as a creative sidekick—not a replacement for creativity, which will always be uniquely mine. I use tools like ChatGPT, Gemini, Cursor, Figma Make, and V0 to elevate my design process, surface blind spots, and speed up the busy work. It’s a starting point that helps me reframe problems, analyze large data sets, and inspire my team to think more critically. For me, AI is an exciting frontier*—one that’s about building new habits, embracing experimentation, and slowing down to ask better questions. It’s also a powerful tool I incorporate directly into end-user experiences whenever I can**.</p>
+                    <p class="text-body-base ai-note">*I designed my website with Cursor, Github, and Figma.<br><a href="https://github.com/tlainy">Take a look at my Github</a></p>
                     <p class="text-body-base ai-note">**I’ve placed 1st and 2nd in hackathons by creating innovative solutions powered by AI. <a href="#">Check out my hacks</a></p>
+                </div>
+                <div class="hero-media ai-hero-media">
+                    <div class="ai-media-stack" aria-hidden="true">
+                        <img class="ai-img-cursor" src="assets/Cursor.png" alt="" />
+                        <img class="ai-img-figma" src="assets/FigmaMake.png" alt="" />
+                    </div>
                 </div>
             </div>
         </section>
